# ChangeLog for app-portage/portpeek
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.48 2010/02/04 20:25:32 mpagano Exp $

*portpeek-1.9.30 (04 Feb 2010)

  04 Feb 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.9.17.ebuild,
  portpeek-1.9.20.ebuild, portpeek-1.9.25.ebuild, +portpeek-1.9.30.ebuild:
  portpeek 1.9.30 now works with the changes done in gentoolkit
  0.3.0_rc8-r1. portpeek < 1.9.30 should rdepend on 0.3.0_rc7. Remove old
  version

*portpeek-1.5.7.4 (29 Jan 2010)

  29 Jan 2010; Michael Pagano <mpagano@gentoo.org> +portpeek-1.5.7.4.ebuild:
  Remove calls to deprecated get_operator function for bug #302482

*portpeek-1.9.25 (20 Jan 2010)

  20 Jan 2010; Mike Pagano <mpagano@gentoo.org> +portpeek-1.9.25.ebuild:
  Clean package.mask as necessary

*portpeek-1.5.7.3 (19 Jan 2010)

  19 Jan 2010; Mike Pagano <mpagano@gentoo.org> +portpeek-1.5.7.3.ebuild:
  Version bump to fix PORTAGE_CONFIGROOT outlined in bug #296573

*portpeek-1.9.20 (03 Jan 2010)

  03 Jan 2010; Mike Pagano <mpagano@gentoo.org> -portpeek-1.9.14.ebuild,
  +portpeek-1.9.20.ebuild:
  Files were not being cleaned from package.mask. Remove old version

  12 Dec 2009; Mike Pagano <mpagano@gentoo.org> -portpeek-1.8.0.ebuild,
  -portpeek-1.8.1.ebuild, -portpeek-1.8.5.ebuild, -portpeek-1.8.6.ebuild,
  -portpeek-1.9.0.ebuild, -portpeek-1.9.7.ebuild:
  Old version cleanup

*portpeek-1.9.17 (19 Oct 2009)

  19 Oct 2009; Mike Pagano <mpagano@gentoo.org> -portpeek-1.9.16.ebuild,
  +portpeek-1.9.17.ebuild:
  Version bump to fix the identification tilde packages that are have no
  more masked version are candidates for removal and the removal of the old
  version.

*portpeek-1.9.16 (18 Oct 2009)

  18 Oct 2009; Mike Pagano <mpagano@gentoo.org> -portpeek-1.9.15.ebuild,
  +portpeek-1.9.16.ebuild:
  Version bump to fix bug concerning use of uninitialized var and old
  version cleanup.
