@@ -4,27 +4,27 @@ Hash: SHA1
 DIST portpeek-1.5.7.2.tar.gz 6286 RMD160 72178e5601def706752027bef4ad8e7358b1841a SHA1 f52db5a55e0681ea1f7a4b826632913105ec61ad SHA256 42493232a5e21f233f2a37bb77a27aed6d1bb7a465ec93f08e23dd2c5eca9dfd
 DIST portpeek-1.5.7.3.tar.gz 6355 RMD160 84a31a578efbdbc7a8eaf87d26ae24374bdca464 SHA1 2578e46117d47b8bf88b5de8450acf8944b65199 SHA256 f4861736ad1d71db72b1f0477b8afd4562a9bd33b5bb1838021a9dcbe0979670
 DIST portpeek-1.5.7.4.tar.gz 6352 RMD160 2ace5b8ca34596d3089a98adbcca7a6c0729ca29 SHA1 52c102a6d606b83d681301ebb8821217f4298e1f SHA256 f0817887d29777910ebac3e4206e0a0b4b84aa1377e4d9b4ebda37d6d65c7fbd
+DIST portpeek-1.5.8.0.tar.gz 7051 RMD160 040128face0f502d02650ceefcaae65bb6c50288 SHA1 6a5e155b0eca0b8f320b75807a55e172f95b73a4 SHA256 c5325ce5e5362e6d34ef890c88febd0e5be66bcc49f0efe1a2536fefefb4bea1
 DIST portpeek-1.6.7.tar.gz 6308 RMD160 f4dc8a88bd2e44a057e17d183a0c6d20ed9b91a9 SHA1 b248a4033280c701eec243ee77f9c7f476c64145 SHA256 13212e7607d059907bc6a5d34cc4e86e1ba80678d5a348df766c9382b1f340b4
 DIST portpeek-1.7.0.tar.gz 6324 RMD160 9f3f0717ee5e06364c1b534d69e9666fa8414b9f SHA1 f444b681e60db98ef45d4cb215c548798c94a450 SHA256 09f2a0de39206000c6924719e5ca594cf09981502ff81f787084057b3fa0df57
 DIST portpeek-1.7.5.tar.gz 6349 RMD160 cbf008e6d036285b323cb842be8a98873ae49933 SHA1 8253d7332c5b1aa244ab8e175dd812713654b872 SHA256 40b9d73ac7480c10b8cb83f255e9a55bdd88b0c6776620b4e44e11e027e9b693
-DIST portpeek-1.9.20.tar.gz 8314 RMD160 b13f90f66958db088c1f083d959606886516a060 SHA1 f8df9e80113046b8f68b1296fb1db8841e75519b SHA256 424393b64dbe0176c6ecf5e951306022da69845d63e4b8d8cf168b6bff195b77
 DIST portpeek-1.9.25.tar.gz 8331 RMD160 2c104e518fe5384d2c050d29af3114a17e0f4480 SHA1 812d509072d2089edfa4c927a70aac9cfa9477a5 SHA256 6d40cbac9806f7645635eb8ebfeb327cd689a2f4cec237842b9d48e67d81231e
 DIST portpeek-1.9.30.tar.gz 8178 RMD160 71c5b8e4c9073325a62c79409e56d0f5926f8cd0 SHA1 bc373777af9416a697280d8c8d7cab33b3733795 SHA256 35350d5394e8437afb42b1f5b26021e5f728035665c47c6ef3e8505f64141b68
 EBUILD portpeek-1.5.7.2.ebuild 612 RMD160 d4c3777a8d3f843325fd7da5417f255583710a73 SHA1 d8921a6bda068ad1065459af29af136adc8f0154 SHA256 4e0836bc5663a73814426e5ae9647be5635ca03d98067f35c442db7b276c539f
 EBUILD portpeek-1.5.7.3.ebuild 617 RMD160 8f991416f8c6de143c309ffed27773347fcc9f24 SHA1 d00ab47ad413842d1ceea6a2bbccf4671ed886b4 SHA256 809e4495f10079f2ee24f7afbab0d81ef9159fb0ee97510b38590038bf87be5d
 EBUILD portpeek-1.5.7.4.ebuild 617 RMD160 9a3769d37de89cf5b56951199567c936e4da83cd SHA1 18e06839be273afbb1bdffc83cfc7b29972caefe SHA256 f3ea8e4862a29479fa5c2c26a210db36bd04c3f9feaae6160efe704898716f59
+EBUILD portpeek-1.5.8.0.ebuild 617 RMD160 fa80f36067ead6596126e7259ffabeada96f6550 SHA1 cc1aeb1a13b5ca3ebc3839769ad9592257aef31c SHA256 f3b016b5b9526383c85d1905578da6cb1abdd64c2c584a7ec1b902720f73e571
 EBUILD portpeek-1.6.7.ebuild 652 RMD160 207124a88160c11ea5803ee7d1144490efea25e5 SHA1 69c21daaba416fad7d24484de6fb9a4891804979 SHA256 9f44653f5c40c4a6e89a39a8075170d88d510bd50f72c9b5ec31f3c2dcd955f6
 EBUILD portpeek-1.7.0.ebuild 652 RMD160 8832713a472e05de816ec85ce2ecde7556126781 SHA1 3a73cf8c8dbdcba0b12bdaeaf252f2ce619b9002 SHA256 2663e7ca57e38f697d9302e6539859301587316286f8e4ff221e2cd19cb5bff7
 EBUILD portpeek-1.7.5.ebuild 652 RMD160 cbdfe9fa5b8fea889130cdb62cb55533abd765a9 SHA1 3a05ec919442b12f1b7025eaf2061bddba00b2fe SHA256 a5302c4505e3009c73f2d92060a08985eea2ed3b26fa8e8b8b9b8486f86019f2
-EBUILD portpeek-1.9.20.ebuild 657 RMD160 6bc734299ea1db7f6466d2a377d8096b85dc74c6 SHA1 472fd462c14360ebf2bee0d851454dcc254483b3 SHA256 5f79e3b0ee94330b28be16b5ebce2a2063eb52cacba0994c657ca394ec4cd6db
 EBUILD portpeek-1.9.25.ebuild 657 RMD160 941e3514e62da92cdeb9f09e177127c2c13bae89 SHA1 964e1ccaf77fbf76ddecae3a1db3407fa0fd7e21 SHA256 006ce5c501a31f6eff61b49d361bf58554b783ab057b29e30052e670a6415ba4
 EBUILD portpeek-1.9.30.ebuild 661 RMD160 0a5bd7f1b2d91ae42e0807710b97aa3e0c36826d SHA1 4fa9c727803d221d962933f424863d5734490c36 SHA256 718b7175f4255d37adc74c92cb4144956c8ea6c90ad5cc9619078a75d20a3ce1
-MISC ChangeLog 8552 RMD160 b93ff59d844fe424685e1d6fb1508fae98d8ce37 SHA1 d187c6fc613ae8c3a6d87bd4a1eaf0d35eaa4a28 SHA256 d22e21f0c5713cba5ea743b49f887aac895de1db286454b22e54f00895822a25
+MISC ChangeLog 8758 RMD160 ce05ead668c8e9d46692bb6c988d00e23561816e SHA1 ed88e839fbfae23c648f5a55eee865f51ab2913e SHA256 26b8d5460e266d2f143db4b6ddad87858647062ff4c7afddb252baa6ed31b625
 MISC metadata.xml 223 RMD160 f1dbda8042f764bb9ee2669116d1b913dd74aff1 SHA1 b5bf88b5ffd7421c3a6587fb2be3f1f1a63d24d2 SHA256 f758aa7033a6e5c4c1023abf7787acca62408ccc718a84430b6fb982c97dd873
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktrLUQACgkQPDPGULV25OOtqgCfUtKZo4V7XVskHs0+Ft7iovvW
-vhIAoITZgxkVpvkWOFlEAIyhBvzSIynD
-=RAt0
+iEYEARECAAYFAktsNt8ACgkQPDPGULV25ONv0QCg13CNRLnX+e7VFCxAbB34M2pv
+kuoAn0NdAWWkzI//xyHGwYFMMb2Coym6
+=txMn
 -----END PGP SIGNATURE-----
