@@ -1,19 +1,18 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/portpeek-1.9.20.ebuild,v 1.2 2010/02/04 20:25:32 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/portpeek-1.5.8.0.ebuild,v 1.1 2010/02/05 15:18:47 mpagano Exp $
 
 DESCRIPTION="A helper program for maintaining the package.keyword and package.unmask files"
 HOMEPAGE="http://www.mpagano.com/blog/?page_id=3"
-SRC_URI="http://www.mpagano.com/downloads/${PF}.tar.gz"
+SRC_URI="http://www.mpagano.com/downloads/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 IUSE=""
 
 DEPEND=""
-RDEPEND="=app-portage/gentoolkit-0.3.0_rc7
-	>=sys-apps/portage-2.2_rc61"
+RDEPEND=">=app-portage/gentoolkit-0.2.4.5"
 
 src_install() {
 	dobin ${PN} || die "dobin failed"
