@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/portpeek
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.48 2010/02/04 20:25:32 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.49 2010/02/05 15:18:47 mpagano Exp $
+
+*portpeek-1.5.8.0 (05 Feb 2010)
+
+  05 Feb 2010; Mike Pagano <mpagano@gentoo.org> +portpeek-1.5.8.0.ebuild,
+  -portpeek-1.9.20.ebuild:
+  Add tilde operator to 1.5 branch and remove old version. Bug #302730
 
 *portpeek-1.9.30 (04 Feb 2010)
 
